--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -14,24 +14,22 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion rootProject.tools.compileSdk
+    namespace 'com.github.barteksc.sample'
 
     defaultConfig {
+        applicationId "com.github.barteksc.sample"
         minSdkVersion rootProject.tools.minSdk
         targetSdkVersion rootProject.tools.targetSdk
         versionCode 3
         versionName "${rootProject.tools.versionName}"
-
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = ["androidManifestFile": "$projectDir/src/main/AndroidManifest.xml".toString()]
-            }
-        }
     }
 }
 
 dependencies {
     implementation project(':android-pdf-viewer')
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'org.androidannotations:androidannotations-api:4.6.0'
-    annotationProcessor "org.androidannotations:androidannotations:4.6.0"
+
+    // REMOVE these AndroidAnnotations dependencies
+    // implementation 'org.androidannotations:androidannotations-api:4.6.0'
+    // annotationProcessor "org.androidannotations:androidannotations:4.6.0"
 }
