--- a/android-pdf-viewer/build.gradle
+++ b/android-pdf-viewer/build.gradle
@@ -1,14 +1,31 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion rootProject.tools.compileSdk
+    compileSdkVersion 35  // Update to match your app
     namespace 'com.github.barteksc.pdfviewer'
 
     defaultConfig {
-        minSdkVersion rootProject.tools.minSdk
-        targetSdkVersion rootProject.tools.targetSdk
+        minSdkVersion 16  // Keep lower for library compatibility
+        targetSdkVersion 35  // Match your app
         versionCode 1
-        versionName "${rootProject.tools.versionName}"
+        versionName "3.2.1-beta.1"
+    }
+
+    // Add build types to match your app
+    buildTypes {
+        debug {
+            minifyEnabled false
+        }
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    // Add compile options to match your app
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
 }
@@ -18,11 +35,17 @@ dependencies {
     api 'com.github.mhiew:pdfium-android:1.9.2'
 }
 
+// Disable javadoc task to avoid JitPack build issues
+tasks.withType(Javadoc) {
+    enabled = false
+}
+
 // Maven Publishing
 ext {
     PUBLISH_GROUP_ID = 'com.github.minhtv-mobiledev'
-    PUBLISH_VERSION = "${rootProject.tools.versionName}"
+    PUBLISH_VERSION = "3.2.1-beta.1"
     PUBLISH_ARTIFACT_ID = 'android-pdf-viewer'
 }
 
-apply from: "${rootProject.projectDir}/android-pdf-viewer/publish-mavencentral.gradle"
+// Comment out if the publish script is causing issues
+// apply from: "${rootProject.projectDir}/android-pdf-viewer/publish-mavencentral.gradle"
